--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -16,24 +16,31 @@
             <div class="icon-sp">
               <ul class="mb-0">
                 <li>
-                  <i class="fa-brands fa-xl fa-facebook-f text-white"></i>
+                  <a class="social-button facebook" href="https://www.facebook.com/jobcartai" target="_blank"> <i class="fa-brands fa-xl fa-facebook-f text-white" ></i></a>
                 </li>
               </ul>
               <li>
-                <i class="fa-brands fa-xl fa-linkedin-in text-white ms-4"></i>
+                <a class="social-button facebook" href="https://www.linkedin.com/company/jobcartinc" target="_blank"><i class="fa-brands fa-xl fa-linkedin-in text-white ms-4"></i></a>
               </li>
               <li>
-                <i class="fa-brands fa-xl fa-x-twitter text-white ms-4"></i>
+                <a class="social-button facebook" href="javascript:void" target="_blank"><i class="fa-brands fa-xl fa-x-twitter text-white ms-4"></i></a>
               </li>
               <li>
-                <i class="fa-brands fa-xl fa-instagram text-white ms-4"></i>
+                <a class="social-button facebook" href="https://www.instagram.com/jobcartai/" target="_blank"> <i class="fa-brands fa-xl fa-instagram text-white ms-4"></i></a>
+                
               </li>
             </div>
           </div>
           <div class="col-md-4">
             <div class="text-end img-position">
-              <img src="/assets/app-store.svg" alt="" class="appstore-png">
-              <img src="/assets/play-store.png" alt="" class="playstore-png">
+             
+              <a target="_blank" href="https://apps.apple.com/ca/app/jobcart/id1447562870">
+                <img src="/assets/app-store.svg" alt="" class="appstore-png">
+              </a>
+              <a target="_blank" href="https://play.google.com/store/apps/details?id=ca.jobcart.job&hl=en_CA&gl=US">
+                <img src="/assets/play-store.png" alt="" class="playstore-png">
+              </a>
+             
             </div>
           </div>
         </div>
