--- a/src/app/component/contact/contact.component.html
+++ b/src/app/component/contact/contact.component.html
@@ -1,34 +1,38 @@
 <div class="container" style="padding-top: 4rem;
 padding-bottom: 4rem">
-<div class="row justify-content-center">
-  <div class="col-md-7">
-    <div class="row">
-    <div class="col-md-12">
-      <p class="contact-head">Contact Us</p>
-      <p class="contact-text">Got a technical issue? Want to send feedback about a beta feature? Need details about our Business plan? Let us know.</p>
+  <div class="row justify-content-center">
+    <div class="col-md-7">
+      <form (ngSubmit)="postForm()">
+
+      <div class="row">
+        <div class="col-md-12">
+          <p class="contact-head">Contact Us</p>
+          <p class="contact-text">Got a technical issue? Want to send feedback about a beta feature? Need details about
+            our Business plan? Let us know.</p>
+        </div>
+          <div class="col-md-6">
+            <label class="form-label">Your email</label>
+            <input type="text"  [(ngModel)]="email" class="form-control mb-4" placeholder="name@email.com">
+          </div>
+          <div class="col-md-6">
+            <label class="form-label">Mobile</label>
+            <input type="text"  [(ngModel)]="mobile" class="form-control mb-4" placeholder="Enter your phone number">
+          </div>
+          <div class="col-md-12">
+            <label class="form-label">Subject</label>
+            <input type="text" [(ngModel)]="subject" class="form-control mb-4" placeholder="Let us know how we can help you">
+          </div>
+          <div class="col-md-12">
+            <label class="form-label">Your message</label>
+            <textarea [(ngModel)]="message" class="form-control mb-4" rows="6" placeholder="Leave a comment..."></textarea>
+          </div>
+          <div class="col-md-12">
+            <a href="" class="btn btn-outline-secondary text-black">Send Message</a>
+          </div>
+      </div>
+    </form>
+
+    </div>
   </div>
-  <div class="col-md-6">
-    <label class="form-label">Your email</label>
-    <input type="text" class="form-control mb-4" placeholder="name@email.com">
-  </div>
-  <div class="col-md-6">
-    <label class="form-label">Mobile</label>
-    <input type="text" class="form-control mb-4" placeholder="Enter your phone number">
-  </div>
-  <div class="col-md-12">
-    <label class="form-label">Subject</label>
-    <input type="text" class="form-control mb-4" placeholder="Let us know how we can help you">
-  </div>
-  <div class="col-md-12">
-    <label class="form-label">Your message</label>
-    <textarea class="form-control mb-4" rows="6" placeholder="Leave a comment..."></textarea>
-  </div>
-  <div class="col-md-12">
-    <a href="" class="btn btn-outline-secondary text-black">Send Message</a>
-  </div>
-  </div>
-</div>
-</div>
 </div>
 <app-lets-grow></app-lets-grow>
-  
