--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,9 @@ html,
 body {
     height: 100%;
 }
+nav.navbar.navbar-expand-lg.bg-body-tertiary {
+    background-color: white !important;
+}
 
 @media (max-width: 767px) {
     img.hidden {
