--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,9 +36,6 @@ nav.navbar.navbar-expand-lg.bg-body-tertiary {
         display: flex !important;
         flex-direction: column-reverse !important;
     }
-    // img.mobile {
-    //     width: 100% !important;
-    // }
     a.btn.btn-outline-secondary.text-white{
         padding: 12px 16px !important;
     }
@@ -152,10 +149,7 @@ a.btn.btn-outline-secondary.text-white {
     line-height: 1.25rem;
     margin-bottom: 0;
 }
-// .img-fluid {
-//     max-width: 83%;
-//     height: auto;
-// }
+
 img.img-fluid.mobile {
     width: 83% !important;
     height: auto;
@@ -237,4 +231,153 @@ padding-bottom: 2.5rem;
 }
 .text-decoration-none:hover{
     text-decoration: underline !important;
+}
+.integrate_animate1__5QV8P {
+    animation: opacityAnimation 2.5s infinite;
+    animation-delay: .6s;
+}
+.integrate_animate2__5t83k {
+    animation: opacityAnimation 2.5s infinite;
+    animation-delay: .3s;
+}
+.integrate_animate3__Sg2zZ {
+    animation: opacityAnimation 2.5s infinite;
+    animation-delay: 0s;
+}
+.animation_animate1__RsJl6 {
+    animation: opacityAnimation 2s infinite;
+    animation-delay: .8s;
+}
+.animation_animate3__Mqe9K {
+    animation: opacityAnimation 2s infinite;
+    animation-delay: 1.5s;
+}
+
+.fingerprint_animate7__D8ipd {
+    animation: fingerprint_green03-ex_do__VOHUa 1.2s infinite;
+}
+
+.fingerprint_animate6__ZfINB {
+    animation: fingerprint_green02-ex_do__W2eAB 1.3s 0s infinite;
+}
+
+.mobile_animate1__rJZ0W {
+    animation: mobile_pine-circle_t__S969F 1.8s .8s infinite, mobile_pine-circle_o__ZOn6c 1.8s .8s infinite;
+}
+.animation_animatepuzzle__Xb6tp {
+    animation: translateAnimation 2s infinite;
+    animation-delay: .8s;
+}
+.animation_animatemill__R_6Zb {
+    animation: animation_a0_t__8ZWLG 2s infinite;
+    animation-delay: .8s;
+}
+@keyframes animation_a0_t__8ZWLG {
+    0% {
+        animation-timing-function: ease-out;
+        transform: translate(32px,23.9px) rotate(0) translate(-32px,-23.9px)
+    }
+
+    23.5294% {
+        animation-timing-function: ease-out;
+        transform: translate(32px,23.9px) rotate(7deg) translate(-32px,-23.9px)
+    }
+
+    58.8235% {
+        animation-timing-function: cubic-bezier(0,0,.714017,.046646);
+        transform: translate(32px,23.9px) rotate(-8.985577deg) translate(-32px,-23.9px)
+    }
+
+    to {
+        transform: translate(32px,23.9px) rotate(.328526deg) translate(-32px,-23.9px)
+    }
+}
+@keyframes translateAnimation {
+    0%,to {
+        transform: translateY(6)
+    }
+
+    50% {
+        transform: translate(5px)
+    }
+}
+@keyframes mobile_pine-circle_t__S969F {
+    0% {
+        animation-timing-function: ease-in-out;
+        transform: translate(30.3px,28.7px) scale(.1)
+    }
+
+    44.4444% {
+        animation-timing-function: ease-in-out;
+        transform: translate(30.3px,28.7px) scale(1.2)
+    }
+
+    72.2222% {
+        animation-timing-function: ease-in-out;
+        transform: translate(30.3px,28.7px) scale(1)
+    }
+
+    to {
+        transform: translate(30.3px,28.7px) scale(1)
+    }
+}
+@keyframes mobile_pine-circle_o__ZOn6c {
+    0% {
+        opacity: 0
+    }
+
+    44.4444% {
+        opacity: 1
+    }
+
+    to {
+        opacity: 1
+    }
+}
+@keyframes fingerprint_green03-ex_do__VOHUa {
+    0% {
+        stroke-dashoffset: 34.18px
+    }
+
+    46.1538% {
+        stroke-dashoffset: 34.18px
+    }
+
+    61.5385% {
+        stroke-dashoffset: 0px
+    }
+
+    to {
+        stroke-dashoffset: 0px
+    }
+}
+@keyframes fingerprint_green02-ex_do__W2eAB {
+    0% {
+        stroke-dashoffset: 42.93px
+    }
+
+    23.0769% {
+        stroke-dashoffset: 42.93px
+    }
+
+    46.1538% {
+        stroke-dashoffset: 0px
+    }
+
+    to {
+        stroke-dashoffset: 0px
+    }
+}
+@keyframes opacityAnimation {
+    0% {
+        opacity: 0
+    }
+
+    50% {
+        opacity: 1
+    }
+
+    to {
+        opacity: 0
+    }
 }
