--- a/src/app/component/blog/blog.component.scss
+++ b/src/app/component/blog/blog.component.scss
@@ -1,7 +1,7 @@
 /* Demo Margin */
 .container{
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 6rem;
+    margin-bottom: 6rem;
   }
   
   /* This may not be needed depending on if you want to restrict the card size*/
